--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@
     --cor-de-fundo: #1E1E1E;
     --verde: #6FFF57;
     --branco: #FFFFFF;
-    --botao-ativo: #3A375E;
-    --botao-inativo: rgba(58, 55, 94, 0.5);
-    --texto-fundo: rgba(58, 55, 94, 0.3);
+    --botao-ativo: #000000;
+    --botao-inativo: rgba(0, 0, 0, 0.5);
+    --texto-fundo: rgba(0, 0, 0, 0.3);
 }
 
 body {
